package main;

public class Object {

}
