package main;

public class Ranking {

}
