package main;

public class RankingPlayer {

}
