package main;

public class Square {

}
